prusti-tests/tests/verify/fail/unsupported/rawptr.rs
fn main() {
    let _: *const i32 = std::ptr::null_mut();   //~ ERROR raw pointers are not supported
}